Package_Tools/include-C/Ubuntu_26.04/gstreamer-1.0/gst/app/h/gstappsrc.h

/* GStreamer
 * Copyright (C) 2007 David Schleef <ds@schleef.org>
 *
 * This library is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Library General Public
 * License as published by the Free Software Foundation; either
 * version 2 of the License, or (at your option) any later version.
 *
 * This library is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Library General Public License for more details.
 *
 * You should have received a copy of the GNU Library General Public
 * License along with this library; if not, write to the
 * Free Software Foundation, Inc., 51 Franklin St, Fifth Floor,
 * Boston, MA 02110-1301, USA.
 */

#ifndef _GST_APP_SRC_H_
#define _GST_APP_SRC_H_

#include <gst/gst.h>
#include <gst/base/gstpushsrc.h>
#include <gst/app/app-prelude.h>
#include <gst/app/app-enumtypes.h>



#define GST_TYPE_APP_SRC \
  (gst_app_src_get_type())
#define GST_APP_SRC(obj) \
  (G_TYPE_CHECK_INSTANCE_CAST((obj),GST_TYPE_APP_SRC,GstAppSrc))
#define GST_APP_SRC_CLASS(klass) \
  (G_TYPE_CHECK_CLASS_CAST((klass),GST_TYPE_APP_SRC,GstAppSrcClass))
#define GST_IS_APP_SRC(obj) \
  (G_TYPE_CHECK_INSTANCE_TYPE((obj),GST_TYPE_APP_SRC))
#define GST_IS_APP_SRC_CLASS(klass) \
  (G_TYPE_CHECK_CLASS_TYPE((klass),GST_TYPE_APP_SRC))
#define GST_APP_SRC_CAST(obj) \
  ((GstAppSrc*)(obj))

typedef struct _GstAppSrc GstAppSrc;
typedef struct _GstAppSrcClass GstAppSrcClass;
typedef struct _GstAppSrcPrivate GstAppSrcPrivate;

/* FIXME 2.0: Make the instance/class struct private */

/**
 * GstAppSrcCallbacks: (skip)
 * @need_data: Called when the appsrc needs more data. A buffer or EOS should be
 *    pushed to appsrc from this thread or another thread. @length is just a hint
 *    and when it is set to -1, any number of bytes can be pushed into @appsrc.
 * @enough_data: Called when appsrc has enough data. It is recommended that the
 *    application stops calling push-buffer until the need_data callback is
 *    emitted again to avoid excessive buffer queueing.
 * @seek_data: Called when a seek should be performed to the offset.
 *    The next push-buffer should produce buffers from the new @offset.
 *    This callback is only called for seekable stream types.
 *
 * A set of callbacks that can be installed on the appsrc with
 * gst_app_src_set_callbacks().
 */
typedef struct {
  void      (*need_data)    (GstAppSrc *src, guint length, gpointer user_data);
  void      (*enough_data)  (GstAppSrc *src, gpointer user_data);
  gboolean  (*seek_data)    (GstAppSrc *src, guint64 offset, gpointer user_data);

  /*< private >*/
  gpointer     _gst_reserved[GST_PADDING];
} GstAppSrcCallbacks;

/**
 * GstAppSrcSimpleCallbacks:
 *
 * A set of callbacks that can be installed on the appsink with
 * gst_app_sink_set_simple_callbacks().
 *
 * Unlike GstAppSrcCallbacks this can also be used from bindings.
 *
 * Since: 1.28
 */
typedef struct _GstAppSrcSimpleCallbacks GstAppSrcSimpleCallbacks;

/**
 * GstAppStreamType:
 * @GST_APP_STREAM_TYPE_STREAM: No seeking is supported in the stream, such as a
 * live stream.
 * @GST_APP_STREAM_TYPE_SEEKABLE: The stream is seekable but seeking might not
 * be very fast, such as data from a webserver.
 * @GST_APP_STREAM_TYPE_RANDOM_ACCESS: The stream is seekable and seeking is fast,
 * such as in a local file.
 *
 * The stream type.
 */
typedef enum
{
  GST_APP_STREAM_TYPE_STREAM,
  GST_APP_STREAM_TYPE_SEEKABLE,
  GST_APP_STREAM_TYPE_RANDOM_ACCESS
} GstAppStreamType;

/**
 * GstAppLeakyType:
 * @GST_APP_LEAKY_TYPE_NONE: Not Leaky
 * @GST_APP_LEAKY_TYPE_UPSTREAM: Leaky on upstream (new buffers)
 * @GST_APP_LEAKY_TYPE_DOWNSTREAM: Leaky on downstream (old buffers)
 *
 * Buffer dropping scheme to avoid the element's internal queue to block when
 * full.
 *
 * Since: 1.20
 */
typedef enum {
  GST_APP_LEAKY_TYPE_NONE,
  GST_APP_LEAKY_TYPE_UPSTREAM,
  GST_APP_LEAKY_TYPE_DOWNSTREAM
} GstAppLeakyType;

struct _GstAppSrc
{
  GstBaseSrc basesrc;

  /*< private >*/
  GstAppSrcPrivate *priv;

  /*< private >*/
  gpointer     _gst_reserved[GST_PADDING];
};

struct _GstAppSrcClass
{
  GstBaseSrcClass basesrc_class;

  /* signals */
  void          (*need_data)       (GstAppSrc *appsrc, guint length);
  void          (*enough_data)     (GstAppSrc *appsrc);
  gboolean      (*seek_data)       (GstAppSrc *appsrc, guint64 offset);

  /* actions */
  GstFlowReturn (*push_buffer)     (GstAppSrc *appsrc, GstBuffer *buffer);
  GstFlowReturn (*end_of_stream)   (GstAppSrc *appsrc);
  GstFlowReturn (*push_sample)     (GstAppSrc *appsrc, GstSample *sample);
  GstFlowReturn (*push_buffer_list) (GstAppSrc *appsrc, GstBufferList *buffer_list);

  /*< private >*/
  gpointer     _gst_reserved[GST_PADDING-2];
};

extern
GType            gst_app_src_get_type                (void);

extern
void             gst_app_src_set_caps                (GstAppSrc *appsrc, const GstCaps *caps);

extern
GstCaps*         gst_app_src_get_caps                (GstAppSrc *appsrc) ;

extern
void             gst_app_src_set_size                (GstAppSrc *appsrc, gint64 size);

extern
gint64           gst_app_src_get_size                (GstAppSrc *appsrc);

extern
void             gst_app_src_set_duration            (GstAppSrc *appsrc, GstClockTime duration);

extern
GstClockTime     gst_app_src_get_duration            (GstAppSrc *appsrc);

extern
void             gst_app_src_set_stream_type         (GstAppSrc *appsrc, GstAppStreamType type);

extern
GstAppStreamType gst_app_src_get_stream_type         (GstAppSrc *appsrc);

extern
void             gst_app_src_set_max_bytes           (GstAppSrc *appsrc, guint64 max);

extern
guint64          gst_app_src_get_max_bytes           (GstAppSrc *appsrc);

extern
guint64          gst_app_src_get_current_level_bytes (GstAppSrc *appsrc);

extern
void             gst_app_src_set_max_buffers           (GstAppSrc *appsrc, guint64 max);

extern
guint64          gst_app_src_get_max_buffers           (GstAppSrc *appsrc);

extern
guint64          gst_app_src_get_current_level_buffers (GstAppSrc *appsrc);

extern
void             gst_app_src_set_max_time            (GstAppSrc *appsrc, GstClockTime max);

extern
GstClockTime     gst_app_src_get_max_time            (GstAppSrc *appsrc);

extern
GstClockTime     gst_app_src_get_current_level_time  (GstAppSrc *appsrc);

extern
void             gst_app_src_set_leaky_type          (GstAppSrc *appsrc, GstAppLeakyType leaky);

extern
GstAppLeakyType  gst_app_src_get_leaky_type          (GstAppSrc *appsrc);

extern
void             gst_app_src_set_latency             (GstAppSrc *appsrc, guint64 min, guint64 max);

extern
void             gst_app_src_get_latency             (GstAppSrc *appsrc, guint64 *min, guint64 *max);

extern
void             gst_app_src_set_emit_signals        (GstAppSrc *appsrc, gboolean emit);

extern
gboolean         gst_app_src_get_emit_signals        (GstAppSrc *appsrc);

extern
GstFlowReturn    gst_app_src_push_buffer             (GstAppSrc *appsrc, GstBuffer *buffer);

extern
GstFlowReturn    gst_app_src_push_buffer_list        (GstAppSrc * appsrc, GstBufferList * buffer_list);

extern
GstFlowReturn    gst_app_src_end_of_stream           (GstAppSrc *appsrc);

extern
GstFlowReturn    gst_app_src_push_sample             (GstAppSrc *appsrc, GstSample *sample);

extern
void             gst_app_src_set_callbacks           (GstAppSrc * appsrc,
                                                      GstAppSrcCallbacks *callbacks,
                                                      gpointer user_data,
                                                      GDestroyNotify notify);

extern
void             gst_app_src_set_simple_callbacks (GstAppSrc * appsrc,
                                                   GstAppSrcSimpleCallbacks *cb);

/**
 * gst_app_src_simple_callbacks_get_type:
 *
 * Since: 1.28
 */
extern
GType gst_app_src_simple_callbacks_get_type (void);

/**
 * GST_TYPE_APP_SRC_SIMPLE_CALLBACKS:
 *
 * Since: 1.28
 */
#define GST_TYPE_APP_SRC_SIMPLE_CALLBACKS (gst_app_src_simple_callbacks_get_type ())

extern
GstAppSrcSimpleCallbacks * gst_app_src_simple_callbacks_new (void);
extern
GstAppSrcSimpleCallbacks * gst_app_src_simple_callbacks_ref (GstAppSrcSimpleCallbacks *cb);
extern
void                       gst_app_src_simple_callbacks_unref (GstAppSrcSimpleCallbacks *cb);

/**
 * GstAppSrcNeedDataCallback:
 * @appsrc: a #GstAppSrc
 * @length: Length hint
 * @user_data: callback user data
 *
 * Called when the appsrc needs more data. A buffer or EOS should be pushed to
 * appsrc from this thread or another thread. @length is just a hint and when it
 * is set to -1, any number of bytes can be pushed into @appsrc.
 *
 * Since: 1.28
 */
typedef void (*GstAppSrcNeedDataCallback) (GstAppSrc * appsrc,
                                           guint length,
                                           gpointer user_data);
extern
void gst_app_src_simple_callbacks_set_need_data (GstAppSrcSimpleCallbacks *cb,
                                                 GstAppSrcNeedDataCallback need_data_cb,
                                                 gpointer user_data,
                                                 GDestroyNotify destroy_notify);

/**
 * GstAppSrcEnoughDataCallback:
 * @appsrc: a #GstAppSrc
 * @user_data: callback user data
 *
 * Called when appsrc has enough data. It is recommended that the application
 * stops calling push-buffer until the need_data callback is emitted again to
 * avoid excessive buffer queueing.
 *
 * Since: 1.28
 */
typedef void (*GstAppSrcEnoughDataCallback) (GstAppSrc * appsrc,
                                             gpointer user_data);
extern
void gst_app_src_simple_callbacks_set_enough_data (GstAppSrcSimpleCallbacks *cb,
                                                   GstAppSrcEnoughDataCallback enough_data_cb,
                                                   gpointer user_data,
                                                   GDestroyNotify destroy_notify);

/**
 * GstAppSrcSeekDataCallback:
 * @appsrc: a #GstAppSrc
 * @offset: Offset to seek to.
 * @user_data: callback user data
 *
 * Called when a seek should be performed to the offset. The next push-buffer
 * should produce buffers from the new @offset. This callback is only called for
 * seekable stream types.
 *
 * Returns: %TRUE if the seek was successful.
 *
 * Since: 1.28
 */
typedef gboolean (*GstAppSrcSeekDataCallback) (GstAppSrc * appsrc,
                                               guint64 offset,
                                               gpointer user_data);
extern
void gst_app_src_simple_callbacks_set_seek_data (GstAppSrcSimpleCallbacks *cb,
                                                 GstAppSrcSeekDataCallback seek_data_cb,
                                                 gpointer user_data,
                                                 GDestroyNotify destroy_notify);

////////////////////////////////////////////////////////////////////G_DEFINE_AUTOPTR_CLEANUP_FUNC                                  (GstAppSrc, gst_object_unref)

////////////////////////////////////////////////////////////////////G_DEFINE_AUTOPTR_CLEANUP_FUNC                                  (GstAppSrcSimpleCallbacks, gst_app_src_simple_callbacks_unref)



#endif